[package]
name = "octokey"
description = "OctoKey is a tentacular tool to manage your GitHub SSH keys with ease and style!"
version = "0.1.0"
authors = ["Sachin Beniwal <sachinbeniwal0101@gmail.com>"]
readme = "README.md"
repository = "https://github.com/benodiwal/octokey"
homepage = "https://github.com/benodiwal/octokey#readme"
keywords = ["github", "ssh-keys", "manager"]
license = "MIT"
edition = "2021"

[[bin]]
name = "octokey"
path = "src/main.rs"

[dependencies]
clap = "2.33"
